# soarbot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NEXT_STEPS.md  README.md  SS_soarbot.py  Todos.txt  config_example.py  database_schema.sql  epd7in5.py  epd7in5_V2.py  image update test.py  lambda_function.py  practice_images.py  pyproject.toml  pytest.ini  run_screen.py  setup_instructions.md  soarbot_lambda.py  station_data_test.py  telegram_test.py  test_serialization.py
.github/workflows/: soarbot-notifications.yml
configs/: epd7in5.py  epd7in5_V2.py  epdconfig.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx
dashboard/src/components/: RunSummary.jsx  StationTable.jsx  WeatherCharts.jsx
experiments/: practice_images.py
tests/: image update test.py  station_data_test.py  telegram_test.py  test_log_notification.py
utils/: eink_utils.py  serialization.py  weather_utils.py
